set nav buttons

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -35,13 +35,13 @@ html
         // Links
         ul.navbar-nav.mr-auto
           li.nav-item.active
-            a.nav-link(href='#')
+            a.nav-link(href='/')
               | Home
               span.sr-only (current)
           li.nav-item
-            a.nav-link(href='#') Features
+            a.nav-link(href='admin') Admin
           li.nav-item
-            a.nav-link(href='#') Pricing
+            a.nav-link(href='users') Users
           // Dropdown
           li.nav-item.dropdown
             a#navbarDropdownMenuLink.nav-link.dropdown-toggle(data-toggle='dropdown' aria-haspopup='true' aria-expanded='false') Dropdown
