added event form

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -7,4 +7,5 @@ block content
         br 
         | Füge hier ein angebot hinzu.
     br
-    input(type="button", value="Neues Angebot!")
+    input(type='submit' value='Neues Angebot Erstellen' onclick="window.location='/new-event';")
+  
