--- a/views/layout.pug
+++ b/views/layout.pug
@@ -54,7 +54,7 @@ html
           .md-form.my-0
             input.form-control.mr-sm-2(type='text' placeholder='Search' aria-label='Search')
 
-    div(style='height: 100%')
+    div(style='height: 100%; padding-top: 50px;')
       .flex-center.flex-column.animated.fadeIn
         block content
     
