Added mongoose & Added event form put data in db

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -7,5 +7,5 @@ block content
         br 
         | Füge hier ein angebot hinzu.
     br
-    input(type='submit' value='Neues Angebot Erstellen' onclick="window.location='/new-event';")
+    input(type='submit' value='Neues Angebot Erstellen' onclick="window.location='/event-form';")
   
