--- a/views/event-form.pug
+++ b/views/event-form.pug
@@ -1,8 +1,23 @@
 extends layout
 
+
 block content
+    //  TODO: 
+            Add 'required fields'
+            Add Correct options to event type
+            Add more options
+            Add possibility to add and remove options
+            Add functioning image upload system
+            Fix calendar input
+
+
+    // This block contains the form used by admins to 
+    // submit events to the database 
+
     form(action="add-event" method="POST").border.border-light.p-5
         p.h4.mb-4.text-center New Event
+
+        // Event type selector
         select#select.browser-default.custom-select.mb-4(name='type')
             option(value='' disabled='' selected='') Event Type
             option(value='1') Surf
@@ -11,21 +26,40 @@ block content
             option(value='4') Hiking
             option(value='5') Meditation
             option(value='6') Other
- 
+
+        // Event name
         label(for='textInput') Event Name
         input#textInput.form-control.mb-4(type='text' placeholder='e.g. Weeklong Surf trip' name='name')
+
+        // Event start date selector
+        label(for='textInput') Event Start Date
+        input#textInput.form-control.mb-4(type='date' placeholder='25.06.2020' name='startDate')
+
+        // Event start date selector
+        label(for='textInput') Event End Date
+        input#textInput.form-control.mb-4(type='date' placeholder='02.07.2020' name='endDate')
+
+        // Event Location
         label(for='textInput') Event Location
         input#textInput.form-control.mb-4(type='text' placeholder='e.g. Travemünde' name='location')
+        
+        // Event description
         label(for='textarea') Event Description
-        textarea#textarea.form-control.mb-4(placeholder='Details about the event.' name='details')
+        textarea#textarea.form-control.mb-4(placeholder='Details about the event.' name='detail')
+        
+        // Event image uploader WIP!
         .input-group.mb-4
             .input-group-prepend
             span.input-group-text Upload
             .custom-file
             input#fileInput.custom-file-input(type='file' aria-describedby='fileInput' name='images')
             label.custom-file-label(for='fileInput') Upload Images
+        
+        // Event public checkbox
         .custom-control.custom-checkbox.mb-4
             input#checkbox.custom-control-input(type='checkbox', name='public')
             label.custom-control-label(for='checkbox') Hide Event
+        
+        // Submit buton
         button.btn.btn-info.btn-block(type='submit') Save
 
