--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,21 +8,21 @@ html
     // Font Awesome
     link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.8.2/css/all.css')
     // Bootstrap core CSS
-    link(href='mdb/css/bootstrap.min.css' rel='stylesheet')
+    link(href='css/bootstrap.min.css' rel='stylesheet')
     // Material Design Bootstrap
-    link(href='mdb/css/mdb.min.css' rel='stylesheet')
+    link(href='css/mdb.min.css' rel='stylesheet')
     // Your custom styles (optional)
-    link(href='mdb/css/style.css' rel='stylesheet')
+    link(href='css/style.css' rel='stylesheet')
     // My custom styles (screw the above)
     link(rel='stylesheet' href='../stylesheets/global.css')
 
-  script(type='text/javascript' src='mdb/js/jquery.min.js')
+  script(type='text/javascript' src='js/jquery.min.js')
   // Bootstrap tooltips
-  script(type='text/javascript' src='mdb/js/popper.min.js')
+  script(type='text/javascript' src='js/popper.min.js')
   // Bootstrap core JavaScript
-  script(type='text/javascript' src='mdb/js/bootstrap.min.js')
+  script(type='text/javascript' src='js/bootstrap.min.js')
   // MDB core JavaScript
-  script(type='text/javascript' src='mdb/js/mdb.min.js')
+  script(type='text/javascript' src='js/mdb.min.js')
 
   header
     // Navbar
