several minor QOL changes

--- a/views/event-form.pug
+++ b/views/event-form.pug
@@ -20,12 +20,12 @@ block content
         // Event type selector
         select#select.browser-default.custom-select.mb-4(name='type')
             option(value='' disabled='' selected='') Event Type
-            option(value='1') Surf
-            option(value='2') Snowboarding
-            option(value='3') Mountain Biking
-            option(value='4') Hiking
-            option(value='5') Meditation
-            option(value='6') Other
+            option(value='Surfing') Surfing
+            option(value='Snowboarding') Snowboarding
+            option(value='Mountain Biking') Mountain Biking
+            option(value='Hiking') Hiking
+            option(value='Meditation') Meditation
+            option(value='Other') Other
 
         // Event name
         label(for='textInput') Event Name
