--- a/views/admin.pug
+++ b/views/admin.pug
@@ -41,7 +41,7 @@ header
   nav.navbar.fixed-top.navbar-expand-lg.navbar-light.white.scrolling-navbar
     .container-fluid
       // Brand
-      a.navbar-brand.waves-effect(href='/' target='_blank')
+      a.navbar-brand.waves-effect(href='/')
         strong.blue-text My Board Rocks
       // Collapse
       button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
@@ -65,10 +65,11 @@ header
         //-       | Free
         //-       | tutorials
         // Right
-        //- ul.navbar-nav.nav-flex-icons
-        //-   li.nav-item
-        //-     a.nav-link.waves-effect(href='https://www.facebook.com/mdbootstrap' target='_blank')
-        //-       i.fab.fa-facebook-f
+        ul.navbar-nav.nav-flex-icons
+          li.nav-item
+            a.nav-link.border.border-light.rounded.waves-effect.grey.lighten-5(href='/auth/logout')
+              i.fas.fa-sign-out-alt.mr-2.red-text
+              | Logout
         //-   li.nav-item
         //-     a.nav-link.waves-effect(href='https://twitter.com/MDBootstrap' target='_blank')
         //-       i.fab.fa-twitter
