--- a/views/admin.pug
+++ b/views/admin.pug
@@ -7,14 +7,14 @@ head
     // Font Awesome
     link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.11.2/css/all.css')
     // Bootstrap core CSS
-    link(href='css/bootstrap.min.css' rel='stylesheet')
+    link(href='/css/bootstrap.min.css' rel='stylesheet')
     // Material Design Bootstrap
-    link(href='css/mdb.min.css' rel='stylesheet')
+    link(href='/css/mdb.min.css' rel='stylesheet')
     // MDBoostrap Datatables
-    link(href='css/addons/datatables2.min.css' rel='stylesheet')
+    link(href='/css/addons/datatables2.min.css' rel='stylesheet')
     // Your custom styles (optional)
-    link(href='css/style.css' rel='stylesheet')
-    link(href='css/style-admin.css' rel='stylesheet')
+    link(href='/css/style.css' rel='stylesheet')
+    link(href='/css/style-admin.css' rel='stylesheet')
 
 
     // Style for Google Maps card
@@ -38,7 +38,7 @@ head
 // Main Navigation
 header
     // Navbar
-    nav.navbar.fixed-top.navbar-expand-lg.navbar-light.white.scrolling-navbar
+    nav.navbar.fixed-top.navbar-expand-md.navbar-light.white.scrolling-navbar
         .container-fluid
             // Brand
             a.navbar-brand.waves-effect(href='/' target='_blank')
@@ -65,17 +65,21 @@ header
                     //-         | Free tutorials
                 // Right
                 ul.navbar-nav.nav-flex-icons
+                    li.nav-item.avatar.view.overlay
+                        a.nav-link.p-0.mr-2(href='#')
+                            img.rounded-circle.z-depth-0(src=userPhoto alt='avatar image' height='35')
+                            .mask.rgba-white-light
                     li.nav-item
-                        a.nav-link.border.border-light.rounded.waves-effect.grey.lighten-5(href='/auth/logout')
-                            i.fas.fa-sign-out-alt.mr-2.red-text
-                            | Logout
-                    //- li.nav-item
-                    //-     a.nav-link.waves-effect(href='https://twitter.com/MDBootstrap' target='_blank')
-                    //-         i.fab.fa-twitter
-                    //- li.nav-item
-                    //-     a.nav-link.border.border-light.rounded.waves-effect(href='https://github.com/mdbootstrap/bootstrap-material-design' target='_blank')
-                    //-         i.fab.fa-github.mr-2
-                    //-         | MDB GitHub
+                        a.nav-link.view.overlay(href='/auth/logout')
+                            i.fas.fa-sign-out-alt.p-0.mr-2.red-text
+                            .mask.rgba-white-light
+                //-     li.nav-item
+                //-         a.nav-link.waves-effect(href='https://twitter.com/MDBootstrap' target='_blank')
+                //-             i.fab.fa-twitter
+                //-     li.nav-item
+                //-         a.nav-link.border.border-light.rounded.waves-effect(href='https://github.com/mdbootstrap/bootstrap-material-design' target='_blank')
+                //-             i.fab.fa-github.mr-2
+                //-             | MDB GitHub
 
 
     // Sidebar
@@ -100,9 +104,9 @@ header
             //-     | Orders
 
 
-// CUSTOM SCRIPTS
+//- CUSTOM SCRIPTS
 
-// Fix the way dates are displayed on the event table.
+//- Fix the way dates are displayed on the event table.
 -function fixedDate(dateString){
     // if it's already a date object and not a string you don't need this line:
     -var date = new Date(dateString);
@@ -169,7 +173,7 @@ main.pt-5.mx-lg-5.animated.fadeIn
                             // Table body
                         // Table
                         .d-flex.justify-content-end
-                            button.btn.btn-sm.btn-rounded(type='button' onclick="window.location='/event-form';") 
+                            button.btn.btn-sm.btn-rounded(type='button' onclick="window.location='/admin/new-event';") 
                                 span(style='margin-right: 8px;') Neues Event Erstellen
                                 i.fas.fa-plus.fa-lg(style='color: green;')
                     // /.Card
@@ -201,28 +205,28 @@ main.pt-5.mx-lg-5.animated.fadeIn
                     // /.Card
                 // Grid column
                
-                // Grid column
-                .col-lg-6.col-md-6.mb-4
-                    // Card
-                    .card
-                        // Card header
-                        .card-header Doughnut Chart
-                        // Card content
-                        .card-body
-                            canvas#doughnutChart
-                    // /.Card
-                // Grid column
-                // Grid column
-                .col-lg-6.col-md-6.mb-4
-                    // Card
-                    .card
-                        // Card header
-                        .card-header Horizontal Bar Chart
-                        // Card content
-                        .card-body
-                            canvas#horizontalBar
-                    // /.Card
-                // Grid column
+                //- // Grid column
+                //- .col-lg-6.col-md-6.mb-4
+                //-     // Card
+                //-     .card
+                //-         // Card header
+                //-         .card-header Doughnut Chart
+                //-         // Card content
+                //-         .card-body
+                //-             canvas#doughnutChart
+                //-     // /.Card
+                //- // Grid column
+                //- // Grid column
+                //- .col-lg-6.col-md-6.mb-4
+                //-     // Card
+                //-     .card
+                //-         // Card header
+                //-         .card-header Horizontal Bar Chart
+                //-         // Card content
+                //-         .card-body
+                //-             canvas#horizontalBar
+                //-     // /.Card
+                //- // Grid column
         // Grid row
 
         // Grid row
