--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,19 +8,19 @@ html
     // Font Awesome
     link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.8.2/css/all.css')
     // Bootstrap core CSS
-    link(href='css/bootstrap.min.css' rel='stylesheet')
+    link(href='/css/bootstrap.min.css' rel='stylesheet')
     // Material Design Bootstrap
-    link(href='css/mdb.min.css' rel='stylesheet')
+    link(href='/css/mdb.min.css' rel='stylesheet')
     // Your custom styles (optional)
-    link(href='css/style.css' rel='stylesheet')
+    link(href='/css/style.css' rel='stylesheet')
 
-  script(type='text/javascript' src='js/jquery.min.js')
+  script(type='/text/javascript' src='js/jquery.min.js')
   // Bootstrap tooltips
-  script(type='text/javascript' src='js/popper.min.js')
+  script(type='/text/javascript' src='js/popper.min.js')
   // Bootstrap core JavaScript
-  script(type='text/javascript' src='js/bootstrap.min.js')
+  script(type='/text/javascript' src='js/bootstrap.min.js')
   // MDB core JavaScript
-  script(type='text/javascript' src='js/mdb.min.js')
+  script(type='/text/javascript' src='js/mdb.min.js')
 
   header
     // Navbar
