--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,8 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(http-equiv='x-ua-compatible' content='ie=edge')
     title W.I.P. Mavial
+    // Favicon
+    link(rel='icon' type='image/ico' href='/img/MWR-favicon.ico')
     // Font Awesome
     link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.8.2/css/all.css')
     // Bootstrap core CSS
