--- a/views/admin.pug
+++ b/views/admin.pug
@@ -107,20 +107,6 @@ header
             //-     | Orders
 
 
-//- CUSTOM SCRIPTS
-
-//- Fix the way dates are displayed on the event table.
--function fixedDate(dateString){
-    // if it's already a date object and not a string you don't need this line:
-    -var date = new Date(dateString);
-    -var d = date.getDate();
-    -var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" ];
-    -var m = monthNames[date.getMonth()];
-    -var y = date.getFullYear();
-    -return d+' '+m+' '+y;
--}
-
-
 // Main layout
 main.pt-5.mx-lg-5.animated.fadeIn
     .container-fluid.mt-5
@@ -147,7 +133,7 @@ main.pt-5.mx-lg-5.animated.fadeIn
                 .card
                     // Card content
                     .card-body
-                        // Table
+                        // Event Table
                         table#events.table.table-hover
                             // Table head
                             thead.white
@@ -159,6 +145,7 @@ main.pt-5.mx-lg-5.animated.fadeIn
                                     th Date
                                     th Details
                                     th Public
+                                    th Edit
                             // Table head
                             // Table body
                             tbody
@@ -172,7 +159,21 @@ main.pt-5.mx-lg-5.animated.fadeIn
                                             i.fas.fa-arrow-right.px-2
                                             | #{fixedDate(event.endDate)}
                                         td(style='width: 25%;')= event.detail
-                                        td= event.public
+                                        //- Set icon instead of boolean for visibility in event table
+                                        if event.public
+                                            td
+                                                i.fas.fa-check
+                                        else
+                                            td
+                                                i.fas.fa-times
+                                        td
+                                            //- EDIT DOES NOT EXIST YET
+                                            button(data-toggle='modal' data-target='#eventEditModal' style='background: transparent; border: none !important')
+                                                i.fas.fa-pen(style='color: DodgerBlue;')
+                                            p
+                                            button#deleteEvent(data-toggle='modal' data-target='#eventDeleteModal' data-event=event style='background: transparent; border: none !important')
+                                                i.far.fa-trash-alt(style='color: Red')
+
                             // Table body
                         // Table
                         .d-flex.justify-content-end
@@ -207,7 +208,7 @@ main.pt-5.mx-lg-5.animated.fadeIn
                             canvas#radarChart
                     // /.Card
                 // Grid column
-               
+
                 //- // Grid column
                 //- .col-lg-6.col-md-6.mb-4
                 //-     // Card
@@ -355,6 +356,41 @@ script.
             $('#events').DataTable();
     });
 
+// CUSTOM SCRIPTS
+
+//- Fix the way dates are displayed on the event table.
+-function fixedDate(dateString) {
+    // if it's already a date object and not a string you don't need this line:
+    -var date = new Date(dateString);
+    -var d = date.getDate();
+    -var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" ];
+    -var m = monthNames[date.getMonth()];
+    -var y = date.getFullYear();
+    -return d+' '+m+' '+y;
+-}
+
+
+//- Send event data to deletion confirmation modal.
+script.
+    $(document).on('show.bs.modal','#eventDeleteModal' , function (event) {
+        var button = $(event.relatedTarget); // Button that triggered the modal
+        var selectedEvent = button.data('event');
+        selectedEventName = selectedEvent.name;
+        $(this).find(".modal-title").text("Are you sure you want to delete: " + "'" +selectedEvent.name + "' ?")
+    });
+
+
+//- Post event name to delete from DB
+script.
+    function deleteEvent() {
+        $.ajax({
+            type: 'POST',
+            url: '/admin/delete-event',
+            data: {name: selectedEventName},
+            success: alert("The event '" + selectedEventName + "' has been deleted"),
+        });
+    }
+
 // Google Maps
 script(src='https://maps.google.com/maps/api/js')
 script.
@@ -372,34 +408,19 @@ script.
             title: "New York"
         });
     }
-    new Chart(document.getElementById("horizontalBar"), {
-        "type": "horizontalBar",
-        "data": {
-            "labels": ["Red", "Orange", "Yellow", "Green", "Blue", "Purple", "Grey"],
-            "datasets": [{
-                "label": "My First Dataset",
-                "data": [22, 33, 55, 12, 86, 23, 14],
-                "fill": false,
-                "backgroundColor": ["rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)",
-                "rgba(255, 205, 86, 0.2)", "rgba(75, 192, 192, 0.2)",
-                "rgba(54, 162, 235, 0.2)",
-                "rgba(153, 102, 255, 0.2)", "rgba(201, 203, 207, 0.2)"
-                ],
-                "borderColor": ["rgb(255, 99, 132)", "rgb(255, 159, 64)", "rgb(255, 205, 86)",
-                "rgb(75, 192, 192)", "rgb(54, 162, 235)", "rgb(153, 102, 255)",
-                "rgb(201, 203, 207)"
-                ],
-                "borderWidth": 1
-            }]
-        },
-        "options": {
-            "scales": {
-                "xAxes": [{
-                    "ticks": {
-                        "beginAtZero": true
-                    }
-                }]
-            }
-        }
-    });
 
+
+// CUSTOM MODALS
+
+// Event deletion prompt
+#eventDeleteModal.modal.fade(tabindex='-1' role='dialog'  aria-hidden='true')
+  .modal-dialog(role='document')
+    .modal-content
+      .modal-header
+        h5.modal-title
+        button.close(type='button' data-dismiss='modal' aria-label='Close')
+          span(aria-hidden='true') &times;
+      //- .modal-body
+      .modal-footer
+        button.btn.btn-light(type='button' data-dismiss='modal') Cancel
+        button.btn.btn-danger(type='button' onclick='deleteEvent()' data-dismiss='modal') delete
