--- a/views/admin.pug
+++ b/views/admin.pug
@@ -143,7 +143,7 @@ main.pt-5.mx-lg-5.animated.fadeIn
                                     th Type
                                     th Location
                                     th Date
-                                    th Details
+                                    //- th Details
                                     th Public
                                     th Edit
                             // Table head
@@ -158,14 +158,14 @@ main.pt-5.mx-lg-5.animated.fadeIn
                                         td #{fixedDate(event.startDate)}
                                             i.fas.fa-arrow-right.px-2
                                             | #{fixedDate(event.endDate)}
-                                        td(style='width: 25%;')= event.detail
+                                        //- td(style='width: 25%;')= event.detail
                                         //- Set icon instead of boolean for visibility in event table
                                         if event.public
                                             td
-                                                i.fas.fa-check
+                                                i.fas.fa-check.mx-4
                                         else
                                             td
-                                                i.fas.fa-times
+                                                i.fas.fa-times.mx-4
                                         td
                                             //- EDIT DOES NOT EXIST YET
                                             button(data-toggle='modal' data-target='#eventEditModal' style='background: transparent; border: none !important')
@@ -177,7 +177,7 @@ main.pt-5.mx-lg-5.animated.fadeIn
                             // Table body
                         // Table
                         .d-flex.justify-content-end
-                            button.btn.btn-sm.btn-rounded(type='button' onclick="window.location='/admin/new-event';") 
+                            button#modalActivate.btn.btn-sm.btn-rounded(type='button' data-toggle='modal' data-target='#newEventModal')
                                 span(style='margin-right: 8px;') Neues Event Erstellen
                                 i.fas.fa-plus.fa-lg(style='color: green;')
                     // /.Card
@@ -370,27 +370,6 @@ script.
 -}
 
 
-//- Send event data to deletion confirmation modal.
-script.
-    $(document).on('show.bs.modal','#eventDeleteModal' , function (event) {
-        var button = $(event.relatedTarget); // Button that triggered the modal
-        var selectedEvent = button.data('event');
-        selectedEventName = selectedEvent.name;
-        $(this).find(".modal-title").text("Are you sure you want to delete: " + "'" +selectedEvent.name + "' ?")
-    });
-
-
-//- Post event name to delete from DB
-script.
-    function deleteEvent() {
-        $.ajax({
-            type: 'POST',
-            url: '/admin/delete-event',
-            data: {name: selectedEventName},
-            success: alert("The event '" + selectedEventName + "' has been deleted"),
-        });
-    }
-
 // Google Maps
 script(src='https://maps.google.com/maps/api/js')
 script.
@@ -412,15 +391,5 @@ script.
 
 // CUSTOM MODALS
 
-// Event deletion prompt
-#eventDeleteModal.modal.fade(tabindex='-1' role='dialog'  aria-hidden='true')
-  .modal-dialog(role='document')
-    .modal-content
-      .modal-header
-        h5.modal-title
-        button.close(type='button' data-dismiss='modal' aria-label='Close')
-          span(aria-hidden='true') &times;
-      //- .modal-body
-      .modal-footer
-        button.btn.btn-light(type='button' data-dismiss='modal') Cancel
-        button.btn.btn-danger(type='button' onclick='deleteEvent()' data-dismiss='modal') delete
+include includes/modals/new-event.pug
+include includes/modals/delete-event.pug
