updated TODO comments in event-form.pug

--- a/views/includes/modals/event-form.pug
+++ b/views/includes/modals/event-form.pug
@@ -49,15 +49,11 @@ script.
             .modal-body
                 //  TODO:
                     Add 'required fields'
-                    Add Correct options to event type
                     Add more options
                     Add possibility to add and remove options
-                    Add functioning image upload system
-                    Fix calendar input
+                    ? Fix calendar input
 
-
-                // This block contains the form used by admins to
-                // submit events to the database
+                // Form used by admins to submit events to the database
 
                 form(action="/admin/new-event" enctype='multipart/form-data' method="POST" name='eventForm').border.border-light.p-5
 
