removed "Users" from navbars

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -59,9 +59,9 @@ header
                     li.nav-item.active
                         a.nav-link.waves-effect(href='/admin')
                             | Admin
-                    li.nav-item
-                        a.nav-link.waves-effect(href='/users')
-                            | Users
+                    //- li.nav-item
+                    //-     a.nav-link.waves-effect(href='/users')
+                    //-         | Users
                     //- li.nav-item
                     //-     a.nav-link.waves-effect(href='https://mdbootstrap.com/education/bootstrap/' target='_blank')
                     //-         | Free tutorials
