--- a/views/layout.pug
+++ b/views/layout.pug
@@ -42,9 +42,9 @@ html
               span.sr-only (current)
           li.nav-item
             a.nav-link(href='/admin') Admin
-          li.nav-item
-            a.nav-link(href='/users') Users
-          // Dropdown
+          //- li.nav-item
+          //-   a.nav-link(href='/users') Users
+          //- // Dropdown
         //-   li.nav-item.dropdown
         //-     a#navbarDropdownMenuLink.nav-link.dropdown-toggle(data-toggle='dropdown' aria-haspopup='true' aria-expanded='false') Dropdown
         //-     .dropdown-menu.dropdown-primary(aria-labelledby='navbarDropdownMenuLink')
